fixed alignment issues

--- a/src/static/Banner.css
+++ b/src/static/Banner.css
@@ -27,7 +27,8 @@
 
 
 .home_page_symbol{
-    width: 50%;
+    #width: 50%;
+    
 }
 
 .main_moto{
